--- a/bootstrap-grid-only.scss
+++ b/bootstrap-grid-only.scss
@@ -7,3 +7,4 @@
 @import "../scss/mixins/clearfix";
 @import "../scss/mixins/vendor-prefixes";
 @import "../scss/grid";
+@import "../scss/reset-box-sizing";
