Fix for the includes

--- a/bootstrap-grid-only.scss
+++ b/bootstrap-grid-only.scss
@@ -1,10 +1,10 @@
 
 // Import all the required mixins and variables.
 
-@import "../scss/variables";
-@import "../scss/mixins/grid";
-@import "../scss/mixins/grid-framework";
-@import "../scss/mixins/clearfix";
-@import "../scss/mixins/vendor-prefixes";
-@import "../scss/grid";
-@import "../scss/reset-box-sizing";
+@import "scss/variables";
+@import "scss/mixins/grid";
+@import "scss/mixins/grid-framework";
+@import "scss/mixins/clearfix";
+@import "scss/mixins/vendor-prefixes";
+@import "scss/grid";
+@import "scss/reset-box-sizing";
